[SourceLookup] Ensure Set of of identified artifacts is never null
Fixes https://github.com/eclipse-m2e/m2e-core/issues/1112